# serverless-multiple-be

./: .gitignore  env.sh  lambda-executor-policy.json  package.json
services/service-node/: package.json  serverless.yml
services/service-node/functions/api/: function.yml  lambda_function.js
services/service-python/: env.sh  package.json  pyproject.toml  serverless.yml
services/service-python/functions/api/: function.yml  lambda_function.py
shared/: serverless.common.yml
