[tool.poetry]
name = "functions"
version = "0.1.0"
description = ""
authors = ["Pablo Atoche (https://github.com/PalituxD)"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.15.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
